Add style to the index.html file
New images were added to the images directory, the index file style was
created and minor changes on the rest of the html files styles were
made.

--- a/style.css
+++ b/style.css
@@ -1,27 +1,62 @@
+*{
+    box-sizing: border-box
+}
+
 body{
  font-size: 20px;   
- background-color: hsl(208, 85%, 97%);
  font-family: Helvetica, Arial;
+ background-color: hsl(8, 32%, 85%);
 }
 .title{
     font-family: "Times New Roman", Arial;
 }
 header{
     background-color: hsl(13, 39%, 89%);
+    border-bottom: 1px black solid;
 }
 h1 {
     text-align: center;
     font-size: 3em;
+    
+}
+h2{
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 100px;
 }
 h3{
     font-size: 2em;
 }
 
-img{
-    margin-left: 28%;
-    margin-right: auto;
-    margin-bottom: 100px;
-}
+
 div{
     width: 70%;
+}
+
+.firstC{
+    height: 320px;    
+    margin-left: auto;
+    margin-right: auto;
+}
+.firstC,
+.anchor{
+    font-size: 30px;
+    color: rgb(161, 131, 85);
+  
+}
+.container2,
+.container1{
+    text-align: center;
+    height: 370px;
+    width: 500px; 
+    display:inline-block;
+    border-bottom: 1px black solid;
+    margin-bottom: 100px;
+}
+.container1{  
+    margin-left: 5%;
+}
+.container2{
+    margin-right: 5%;
+    margin-left: 100px;
 }
